# Works

./: proxy.txt  requirements.txt
CIFAR-10/: data_load.py  models.py  requirements.txt  train.py  val.py
CVOI/: CVOI-pcl-oneapi-perf.xlsx  CVOI-算子.docx  CVOI-算子.txt  N95-cpu.txt  N97-gpu.txt  build_test_cvoi_cpu.sh  build_test_cvoi_gpu.sh  cvoi-ADl-P.txt  win_cpu.bat  win_gpu.bat
MatchTemplate/: CMakeLists.txt  MatchTemplate2.cpp  README.md
OpenCV_IPP_PCL_ONEAPI/Histogram/: CMakeLists.txt  histogram.h
OpenCV_IPP_PCL_ONEAPI/Resize/: CMakeLists.txt  Resize.cpp
OpenCV_Perf/: Perf.md  README.md  build_perf.bat  build_perf.sh  build_perf_core_.sh  perf_list_core.txt  perf_list_imgproc.txt
Opencv_IPP_PCL_ONEAP/: README.md  histogram.cpp
Opencv_blob_case/: README.md
Opencv_tests_selected/: README.md  one_script_opencv_tests.sh  opencv_test_lists.xlsx  opencv_test_results_to_excel.py  opencv_test_selected.sh  opencv_tests_selected.sh
PR_dev_windows/: README.md
PR_windows/: README.md
PR_windows_pcl_oneapi/: README.md
hei_song_ke/: CM.py  LLaVA_OV.py  path_one.py  requirements.txt
opencv_12700_perf_analysis/: README.md
opencv_houghlines_test/: README.md
opencv_instruction/: README.md
opencv_operator_acceleration/: README.md
opencv_operator_acceleration/accumulateSquare/: CMakeLists.txt  README.md  main.cpp
openvino/openvino_yolov8_cxx_python/: README.md  openvino-yolov8.cpp  openvino_infer_img.py
